KDE Desktop can not be installed by default

--- a/data/7.9.0/http/desktop.cfg
+++ b/data/7.9.0/http/desktop.cfg
@@ -67,10 +67,7 @@ d-i grub-pc/install_devices multiselect /dev/sda
 
 ### Package selection
 tasksel tasksel/first multiselect standard, desktop
-tasksel tasksel/desktop multiselect kde, gnome
-
-kdm shared/default-x-display-manager select gdm
-gdm shared/default-x-display-manager select gdm
+tasksel tasksel/desktop multiselect gnome
 
 d-i pkgsel/include string vim-nox nano wget curl dkms make nfs-common bzip2 sudo ssh openssh-server
 d-i pkgsel/upgrade select none
