--- a/data/8.0.0/http/desktop.cfg
+++ b/data/8.0.0/http/desktop.cfg
@@ -66,11 +66,7 @@ d-i grub-installer/bootdev string /dev/sda
 
 
 ### Package selection
-tasksel tasksel/first multiselect standard, desktop
-tasksel tasksel/desktop multiselect kde, gnome
-
-kdm shared/default-x-display-manager select gdm
-gdm shared/default-x-display-manager select gdm
+tasksel tasksel/first multiselect standard, gnome-desktop
 
 d-i pkgsel/include string vim-nox nano wget curl dkms make nfs-common bzip2 sudo ssh openssh-server
 d-i pkgsel/upgrade select none
